// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-kOPcWz fKVgqq"
  >
    <div
      class="sc-cWSHoV grJfRQ"
    >
      <div
        class="sc-eBMEME gobmhv"
      >
        <div
          class="sc-lcIPJg sc-tagGq hFpDKu kSkJlk"
        >
          ERROR
        </div>
        <h4
          class="sc-bbSZdi eaoGbO"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-dCFHLb"
      >
        <pre
          class="sc-hknOHE kfnekJ"
          data-testid="cypherFrameErrorMessage"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-jxOSlx onSme"
      >
        <a
          class="sc-fhzFiK bCLxDq"
        >
          <i
            class="sc-fTFjTM dmjhyI fa fa-play-circle-o"
            style="line-height: inherit;"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display a nested error for gql status codes 1`] = `
<div>
  <div
    class="sc-kOPcWz fKVgqq"
  >
    <div
      class="sc-cWSHoV grJfRQ"
    >
      <div
        class="sc-eBMEME gobmhv"
      >
        <div
          class="sc-lcIPJg sc-tagGq hFpDKu kSkJlk"
        >
          ERROR
        </div>
        <h4
          class="sc-bbSZdi eaoGbO"
        >
          42N51: Syntax error or access rule violation - invalid parameter
        </h4>
      </div>
      <div
        class="sc-dCFHLb"
      >
        <pre
          class="sc-hknOHE kfnekJ"
          data-testid="cypherFrameErrorMessage"
        >
          Invalid parameter $\`param\`.
        </pre>
      </div>
      <div
        class="sc-kOPcWz gIpVqq"
      >
        <div
          class="sc-cWSHoV grJfRQ"
        >
          <div
            class="sc-eBMEME gobmhv"
          >
            <h4
              class="sc-bbSZdi eaoGbO"
            >
              22G03: Data exception - invalid value type
            </h4>
          </div>
          <div
            class="sc-kOPcWz gIpVqq"
          >
            <div
              class="sc-cWSHoV grJfRQ"
            >
              <div
                class="sc-eBMEME gobmhv"
              >
                <h4
                  class="sc-bbSZdi eaoGbO"
                >
                  22N27: Data exception - invalid entity type
                </h4>
              </div>
              <div
                class="sc-dCFHLb"
              >
                <pre
                  class="sc-hknOHE kfnekJ"
                  data-testid="cypherFrameErrorMessage"
                >
                  Invalid input '******' for $\`param\`. Expected to be STRING.
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error 1`] = `
<div>
  <div
    class="sc-kOPcWz fKVgqq"
  >
    <div
      class="sc-cWSHoV grJfRQ"
    >
      <div
        class="sc-eBMEME gobmhv"
      >
        <div
          class="sc-lcIPJg sc-tagGq hFpDKu kSkJlk"
        >
          ERROR
        </div>
        <h4
          class="sc-bbSZdi eaoGbO"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-dCFHLb"
      >
        <pre
          class="sc-hknOHE kfnekJ"
          data-testid="cypherFrameErrorMessage"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsView does display an error for gql status codes 1`] = `
<div>
  <div
    class="sc-kOPcWz fKVgqq"
  >
    <div
      class="sc-cWSHoV grJfRQ"
    >
      <div
        class="sc-eBMEME gobmhv"
      >
        <div
          class="sc-lcIPJg sc-tagGq hFpDKu kSkJlk"
        >
          ERROR
        </div>
        <h4
          class="sc-bbSZdi eaoGbO"
        >
          22N14: Data exception - invalid temporal value combination
        </h4>
      </div>
      <div
        class="sc-dCFHLb"
      >
        <pre
          class="sc-hknOHE kfnekJ"
          data-testid="cypherFrameErrorMessage"
        >
          Cannot select both epochSeconds and 'datetime'.
        </pre>
      </div>
    </div>
  </div>
</div>
`;
